--- a/views/home.ejs
+++ b/views/home.ejs
@@ -37,9 +37,10 @@
                 <div class="card mb-3" style="max-width: 18rem;">
                     <div class="card-header bg-info text-white">Click Count: <%= urlResult[i].clickCount %> </div>
                     <div class="card-body bg-light text-dark">
-                        <h6 class="card-title">Short URl: <a href="http://localhost:3000/<%= urlResult[i].shortUrl %>" target="_blank" class="">http://localhost:3000/<%= urlResult[i].shortUrl %></a></h6>
-                        <p class="card-text">
-                            Original URl: <%= urlResult[i].longUrl %>
+                        <h6 class="card-title">Short URl: <a href="http://localhost:3000/<%= urlResult[i].shortUrl %>"
+                                target="_blank" class="">http://localhost:3000/<%= urlResult[i].shortUrl %></a></h6>
+                                Original URl:<p id="ellipsis-ex" class="card-text text-truncate" onclick="toggleEllipsis()">
+                             <%= urlResult[i].longUrl %>
                         </p>
                         <a href="/delete/<%= urlResult[i].id %>" class="btn btn-danger">Delete</a>
                     </div>
@@ -47,7 +48,7 @@
             </div>
             <% } %>
             <!-- card end -->
-           
+
         </div>
     </div>
 </body>
